dist/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: server
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
